--- a/.github/workflows/update_popular_repos.yml
+++ b/.github/workflows/update_popular_repos.yml
@@ -2,14 +2,12 @@ name: Update README with Popular Repos
 
 on:
   schedule:
-    # Menjalankan setiap 6 jam
     - cron: '15 */6 * * *'
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-    # Tambahkan blok izin ini
     permissions:
       contents: write
     steps:
@@ -22,3 +20,7 @@ jobs:
           readme_path: 'README.md'
           comment_tag_name: "POPULAR_REPOS"
           template: "- **[$title]($url)**: $description ⭐ $stars"
+          # Baris tambahan untuk memaksa commit
+          commit_message: "docs: update popular repos in README"
+          committer_name: "GitHub Actions Bot"
+          committer_email: "41898282+github-actions[bot]@users.noreply.github.com"
