--- a/.github/workflows/update_popular_repos.yml
+++ b/.github/workflows/update_popular_repos.yml
@@ -23,6 +23,12 @@ jobs:
           comment_tag_name: "POPULAR_REPOS"
           template: "- **[$title]($url)**: $description ⭐ $stars"
 
+      - name: Debug Tampilkan isi README
+        run: |
+          echo "--- Isi README.md SETELAH diubah oleh workflow ---"
+          cat README.md
+          echo "----------------------------------------------------"
+
       - name: Commit and push if changed
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
